--- a/src/_link.sass
+++ b/src/_link.sass
@@ -1,7 +1,7 @@
 a
-    color: $primary
+    color: $link-color
     text-decoration: none
 
     &:focus,
     &:hover
-        color: $primary-accent
+        color: $link-hover
