--- a/src/_table.sass
+++ b/src/_table.sass
@@ -6,11 +6,11 @@ table
     width: 100%
 
 th
-    background-color: $base-accent
+    background-color: $table-head-background
 
 td,
 th
-    border-bottom: 0.1em solid $base-accent
+    border-bottom: 0.1rem solid $table-border-color
     padding: 1.0rem 1.4rem
     text-align: left
 
@@ -22,8 +22,8 @@ th
 
 .table-accent
     th
-        color: $primary
+        color: $table-accent-head-color
 
     td,
     th
-        border-color: $primary-accent
+        border-color: $table-accent-border-color
