--- a/src/nona.sass
+++ b/src/nona.sass
@@ -1,5 +1,6 @@
-/*! Nona | CSS Framework With Simplicity In Mind - 0.1.0 */
+/*! Nona | CSS Framework With Simplicity In Mind - 0.2.0 */
 @import _color
+@import _variable
 @import _base
 @import _blockquote
 @import _button
