--- a/src/_blockquote.sass
+++ b/src/_blockquote.sass
@@ -3,10 +3,10 @@ blockquote
     padding: 0.8rem 1.0rem
     
     &.blockquote-left
-        border-left: 0.2rem solid $primary
+        border-left: 0.2rem solid $blockquote-border-color
     
     &.blockquote-right
-        border-right: 0.2rem solid $primary
+        border-right: 0.2rem solid $blockquote-border-color
     
     *:last-child
         margin-bottom: 0
