--- a/src/_line.sass
+++ b/src/_line.sass
@@ -5,6 +5,6 @@ hr
     height: 0.1rem
 
     &.hr-accent
-        background-color: $primary
+        background-color: $hr-accent-color
         height: 0.4rem
         width: 4rem
