--- a/src/_base.sass
+++ b/src/_base.sass
@@ -5,11 +5,11 @@ html
 body
 	background-color: $base
 	color: $base-text
-	font-family: 'Roboto', sans-serif
+	font-family: 'Open Sans', sans-serif
 	font-weight: 400
 	letter-spacing: .01rem
-	line-height: 1.0rem
+	line-height: 1
 
 html,
 body
-    margin: 0 auto
+  margin: 0 auto
