--- a/src/nona.sass
+++ b/src/nona.sass
@@ -1,6 +1,8 @@
-/*! Nona | CSS Framework With Simplicity In Mind - 0.2.0 */
-@import _color
-@import _variable
+/*! Nona - Simplified CSS Framework - 0.3.0 */
+@import __color
+@import __variable
+@import __mixins
+
 @import _base
 @import _blockquote
 @import _button
@@ -16,4 +18,5 @@
 @import _table
 @import _typography
 @import _utils
+
 @import _queries
