--- a/src/_queries.sass
+++ b/src/_queries.sass
@@ -1,20 +1,15 @@
-@media (max-width: 36.0em)
-	html
-		font-size: 14px
-
+@include displayIs(small)
 	.container
-		width: 98%
+		width: 96%
 
-@media (max-width: 48.0em)
-	html
-		font-size: 16px
-	
-	.container
-		width: 92%
-		
-@media (max-width: 62.0em)
-	html
-		font-size: 18px
+	.row
+		&.mobile
+			flex-direction: row
 
+@include displayIs(medium)
 	.container
-		width: 86%
+		width: 84%
+
+@include displayIs(large)
+	.container
+		width: 72%
