--- a/src/_button.sass
+++ b/src/_button.sass
@@ -24,6 +24,17 @@ input[type='submit']
 
     &.button-round
         border-radius: $button-rounded-radius
+
+    &.button-outline
+    background-color: transparent
+    border: 0.1rem solid
+    border-color: $button-color
+    color: $button-color
+
+    &:focus,
+    &:hover
+        background-color: $button-color
+        color: $base
         
     &.button-clear
         background-color: transparent
