--- a/css/nona.css
+++ b/css/nona.css
@@ -49,6 +49,10 @@ input[type='submit'] {
   padding: 0.4rem 0.8rem;
   text-align: center;
   white-space: nowrap;
+  background-color: transparent;
+  border: 0.1rem solid;
+  border-color: #39AF6B;
+  color: #39AF6B;
 }
 
 .button:focus, .button:hover,
@@ -79,6 +83,19 @@ input[type='button'].button-round,
 input[type='reset'].button-round,
 input[type='submit'].button-round {
   border-radius: 1rem;
+}
+
+.button:focus, .button:hover,
+button:focus,
+button:hover,
+input[type='button']:focus,
+input[type='button']:hover,
+input[type='reset']:focus,
+input[type='reset']:hover,
+input[type='submit']:focus,
+input[type='submit']:hover {
+  background-color: #39AF6B;
+  color: #fefefe;
 }
 
 .button.button-clear,
