Fix .button-round border color

--- a/src/_button.sass
+++ b/src/_button.sass
@@ -24,6 +24,7 @@ input[type='submit']
 
     &.button-round
         border-radius: $button-rounded-radius
+        border-color: $button-color
 
     &.button-outline
         background-color: transparent
