--- a/src/_button.sass
+++ b/src/_button.sass
@@ -17,6 +17,7 @@ input[type='submit']
     &:focus,
     &:hover,
         background-color: $button-hover
+        border-color: $button-hover
         color: $base
     
     &[disabled]
